--- a/broker/build.gradle
+++ b/broker/build.gradle
@@ -21,5 +21,11 @@ dependencies {
     compile project(':netty_parser')
     compile 'com.lmax:disruptor:3.3.0'
     compile 'org.mapdb:mapdb:1.0.6'
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    testCompile 'junit:junit:4.8.2'
+    testCompile 'org.kaazing:robot.junit:0.0.0.12'        
+    testCompile 'org.mockito:mockito-core:1.9.0'        
+    testCompile 'org.fusesource.mqtt-client:mqtt-client:1.9'
+    testCompile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.1'        
+    testCompile 'org.eclipse.jetty.websocket:websocket-client:9.2.0.M1'
 }
-
